--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --env-file .env --watch src/server.ts",
+    "dev": "node --env-file .env --experimental-strip-types --watch --no-warnings src/server.ts",
     "db:seed": "node --env-file .env src/database/seed.ts",
+    "start": "node --experimental-strip-types --no-warnings src/server.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
@@ -33,6 +34,7 @@
     "@faker-js/faker": "^10.1.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
