--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,10 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
