--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       POSTGRES_DB: proffy_database
     ports:
       - "5432:5432"
+    volumes:
+      - 'db:/var/lib/postgresql/data'
     networks:
       - proffy
   
@@ -34,3 +36,6 @@ services:
 networks:
   proffy:
     driver: bridge
+
+volumes:
+  db:
