--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -22,3 +22,14 @@ jobs:
       
       - name: Build docker image
         run: docker build -t santosfael/api-proffy:${{ steps.generate_sha.outputs.sha }} .
+      
+      - name: Login into the container registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Push docker image
+        run: |
+          docker push santosfael/api-proffy:${{ steps.generate_sha.outputs.sha }}
+
