feat(CI): adding generate tag latest

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -33,4 +33,6 @@ jobs:
       - name: Push docker image
         run: |
           docker push santosfael/api-proffy:${{ steps.generate_sha.outputs.sha }}
+          docker tag santosfael/api-proffy:${{ steps.generate_sha.outputs.sha }} santosfael/api-proffy:latest
+          docker push santosfael/api-proffy:latest
 
