chore(CI-CD): adding step update version app in value.yaml

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -35,4 +35,16 @@ jobs:
           docker push santosfael/api-proffy:${{ steps.generate_sha.outputs.sha }}
           docker tag santosfael/api-proffy:${{ steps.generate_sha.outputs.sha }} santosfael/api-proffy:latest
           docker push santosfael/api-proffy:latest
+      
+      - name: Update value.yaml in Helm repo
+        uses: fjogeleit/yaml-update-action@main
+        with:
+          valueFile: charts/proffy/values.yaml
+          propertyPath: 'image.tag'
+          value: ${{ steps.generate_sha.outputs.sha }}
+          repository: Santosfael/helm-files
+          branch: main
+          token: ${{ secrets.TOKEN_GITHUB }}
+          message: 'Update image tag to ${{ steps.generate_sha.outputs.sha }}'
+
 
