fix(CI-CD): quote in value image tag in update value

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -51,19 +51,13 @@ jobs:
           branch: main
           path: .
           token: ${{ secrets.TOKEN_GITHUB }} 
-      
-      - name: Debug file structure
-        run: |
-          echo "Conteúdo da pasta helm-files:"
-          cd proffy
-          ls
 
       - name: Update value.yaml in Helm repo
         uses: fjogeleit/yaml-update-action@main
         with:
           valueFile: 'proffy/values.yaml'
           propertyPath: 'image.tag'
-          value: ${{ needs.build-and-push.outputs.sha }}
+          value: "${{ needs.build-and-push.outputs.sha }}"
           repository: Santosfael/helm-files
           branch: main
           token: ${{ secrets.TOKEN_GITHUB }}
